<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>spring-boot-featureflag-unleash</artifactId>
   <version>1.0.0</version>
   <name>spring-boot-featureflag-unleash</name>
   <description>Demo project for Spring Boot FeatureFlag with Unleash</description>

   <parent>
      <groupId>cn.tuyucheng.taketoday.spring-boot-modules</groupId>
      <artifactId>spring-boot-modules</artifactId>
      <version>1.0.0</version>
   </parent>

   <dependencies>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
      </dependency>
      <dependency>
         <groupId>io.getunleash</groupId>
         <artifactId>unleash-client-java</artifactId>
         <version>${unleash-client-java.version}</version>
      </dependency>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-actuator</artifactId>
      </dependency>
      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <properties>
      <java.version>21</java.version>
      <unleash-client-java.version>10.0.1</unleash-client-java.version>
      <springdoc.version>2.2.0</springdoc.version>
      <start-class>cn.tuyucheng.taketoday.unleash.DemoApplication</start-class>
   </properties>
</project>